--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -480,20 +480,10 @@ body.loading #wrapper {
     .quick-icon {
         float: left;
         width: 100px;
-
-        .fa-ticket, .fa-check-circle {
-            margin-top: -20px;
-        }
-        .fa-wrench {
-            margin-top: -30px;
-        }
-        .fa-money, .fa-envelope {
-            margin-top: -40px;
-        }
+        margin: 0;
     }
     .quick-icon .fa {
         font-size: 100px;
-        line-height: 170px;
         display: block;
     }
     .quick-content {
