--- a/src/pretix/control/templates/pretixcontrol/events/index.html
+++ b/src/pretix/control/templates/pretixcontrol/events/index.html
@@ -4,134 +4,150 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "Events" %}{% endblock %}
 {% block content %}
-    <h1>{% trans "Events" %}</h1>
-    <p>{% trans "The list below shows all events you have administrative access to. Click on the event name to access event details." %}</p>
-    {% if events|length == 0 and not filter_form.filtered %}
-        <div class="empty-collection">
-            <p>
-                {% blocktrans trimmed %}
-                    You currently do not have access to any events.
-                {% endblocktrans %}
-            </p>
-
-            <a href="{% url "control:events.add" %}" class="btn btn-primary btn-lg">
-                <span class="fa fa-plus"></span>
-                {% trans "Create a new event" %}
-            </a>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h1 class="panel-title">{% trans "Events" %}</h1>
         </div>
-    {% else %}
-        <form class="row filter-form" action="" method="get">
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                {% bootstrap_field filter_form.query layout='inline' %}
+        <div class="panel-body">{% trans "The list below shows all events you have administrative access to. Click on the event name to access event details." %}</div>
+    </div>
+    <div class="panel panel-default">
+        {% if events|length == 0 and not filter_form.filtered %}
+            <div class="empty-collection panel-body">
+                <p>
+                    {% blocktrans trimmed %}
+                        You currently do not have access to any events.
+                    {% endblocktrans %}
+                </p>
+
+                <a href="{% url "control:events.add" %}" class="btn btn-primary btn-lg">
+                    <span class="fa fa-plus"></span>
+                    {% trans "Create a new event" %}
+                </a>
             </div>
-            <div class="col-md-3 col-sm-6 col-xs-12">
-                {% bootstrap_field filter_form.status layout='inline' %}
-            </div>
-            <div class="col-md-3 col-sm-6 col-xs-12">
-                {% bootstrap_field filter_form.organizer layout='inline' %}
-            </div>
-            <div class="col-md-2 col-sm-6 col-xs-12">
-                <button class="btn btn-primary btn-block" type="submit">
-                    <span class="fa fa-filter"></span>
-                    <span class="hidden-md">
+        {% else %}
+            <form class="panel-body row filter-form" action="" method="get">
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    {% bootstrap_field filter_form.query layout='inline' %}
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    {% bootstrap_field filter_form.status layout='inline' %}
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    {% bootstrap_field filter_form.organizer layout='inline' %}
+                </div>
+                <div class="col-md-2 col-sm-6 col-xs-12">
+                    <button class="btn btn-primary btn-block" type="submit">
+                        <span class="fa fa-filter"></span>
+                        <span class="hidden-md">
                     {% trans "Filter" %}
                 </span>
-                </button>
+                    </button>
+                </div>
+            </form>
+            <div class="panel-body">
+                <a href="{% url "control:events.add" %}" class="btn btn-default">
+                    <span class="fa fa-plus"></span>
+                    {% trans "Create a new event" %}
+                </a>
             </div>
-        </form>
-        <p>
-            <a href="{% url "control:events.add" %}" class="btn btn-default">
-                <span class="fa fa-plus"></span>
-                {% trans "Create a new event" %}
-            </a>
-        </p>
-        <table class="table table-condensed table-hover">
-            <thead>
-            <tr>
-                <th>
-                    {% trans "Event name" %}
-                </th>
-                {% if not hide_orga %}
-                    <th>
-                        {% trans "Organizer" %}
-                        <a href="?{% url_replace request 'ordering' '-organizer' %}"><i class="fa fa-caret-down"></i></a>
-                        <a href="?{% url_replace request 'ordering' 'organizer' %}"><i class="fa fa-caret-up"></i></a>
-                    </th>
-                {% endif %}
-                <th>
-                    {% trans "Start date" %}
-                    <a href="?{% url_replace request 'ordering' '-date_from' %}"><i class="fa fa-caret-down"></i></a>
-                    <a href="?{% url_replace request 'ordering' 'date_from' %}"><i class="fa fa-caret-up"></i></a>
-                    /
-                    {% trans "End date" %}
-                    <a href="?{% url_replace request 'ordering' '-date_to' %}"><i class="fa fa-caret-down"></i></a>
-                    <a href="?{% url_replace request 'ordering' 'date_to' %}"><i class="fa fa-caret-up"></i></a>
-                </th>
-                <th>
-                    {% trans "Paid tickets per quota" %}
-                    <a href="?{% url_replace request 'ordering' '-sum_tickets_paid' %}"><i class="fa fa-caret-down"></i></a>
-                    <a href="?{% url_replace request 'ordering' 'sum_tickets_paid' %}"><i class="fa fa-caret-up"></i></a>
-                </th>
-                <th class="text-right">
-                    {% trans "Status" %}
-                    <a href="?{% url_replace request 'ordering' '-live' %}"><i class="fa fa-caret-down"></i></a>
-                    <a href="?{% url_replace request 'ordering' 'live' %}"><i class="fa fa-caret-up"></i></a>
-                </th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for e in events %}
+            <table class="table table-condensed table-hover">
+                <thead>
                 <tr>
-                    <td class="event-name-col">
-                        <strong><a href="{% url "control:event.index" organizer=e.organizer.slug event=e.slug %}">{{ e.name }}</a></strong>
-                        <br><small>{{ e.slug }}</small>
-                    </td>
-                    {% if not hide_orga %}<td>{{ e.organizer }}</td>{% endif %}
-                    <td class="event-date-col">
-                        {% if e.has_subevents %}
-                            {{ e.min_from|default_if_none:""|date:"SHORT_DATETIME_FORMAT" }}
-                        {% else %}
-                            {{ e.get_short_date_from_display }}
-                        {% endif %}
-                        {% if e.has_subevents %}
-                            <span class="label label-default">{% trans "Series" %}</span>
-                        {% endif %}
-                        {% if e.settings.show_date_to and e.date_to %}
-                             –<br>
-                            {% if e.has_subevents %}
-                                {{ e.max_fromto|default_if_none:e.max_from|default_if_none:e.max_to|default_if_none:""|date:"SHORT_DATETIME_FORMAT" }}
-                            {% else %}
-                                {{ e.get_short_date_to_display }}
-                            {% endif %}
-                        {% endif %}
-                    </td>
-                    <td>
-                        {% for q in e.first_quotas|slice:":3" %}
-                            {% include "pretixcontrol/fragment_quota_box_paid.html" with quota=q %}
-                        {% endfor %}
-                        {% if e.first_quotas|length > 3 %}
-                            <a href="{% url "control:event.items.quotas" organizer=e.organizer.slug event=e.slug %}"
-                                    class="quotabox-more" data-toggle="tooltip" title="{% trans "More quotas" %}"
-                                    data-placement="top">
-                                &middot;&middot;&middot;
-                            </a>
-                        {% endif %}
-                    </td>
-                    <td class="text-right">
-                        {% if not e.live %}
-                            <span class="label label-danger">{% trans "Shop disabled" %}</span>
-                        {% elif e.presale_has_ended %}
-                            <span class="label label-warning">{% trans "Presale over" %}</span>
-                        {% elif not e.presale_is_running %}
-                            <span class="label label-warning">{% trans "Presale not started" %}</span>
-                        {% else %}
-                            <span class="label label-success">{% trans "On sale" %}</span>
-                        {% endif %}
-                    </td>
+                    <th>
+                        {% trans "Event name" %}
+                    </th>
+                    {% if not hide_orga %}
+                        <th>
+                            {% trans "Organizer" %}
+                            <a href="?{% url_replace request 'ordering' '-organizer' %}"><i
+                                    class="fa fa-caret-down"></i></a>
+                            <a href="?{% url_replace request 'ordering' 'organizer' %}"><i
+                                    class="fa fa-caret-up"></i></a>
+                        </th>
+                    {% endif %}
+                    <th>
+                        {% trans "Start date" %}
+                        <a href="?{% url_replace request 'ordering' '-date_from' %}"><i
+                                class="fa fa-caret-down"></i></a>
+                        <a href="?{% url_replace request 'ordering' 'date_from' %}"><i class="fa fa-caret-up"></i></a>
+                        /
+                        {% trans "End date" %}
+                        <a href="?{% url_replace request 'ordering' '-date_to' %}"><i class="fa fa-caret-down"></i></a>
+                        <a href="?{% url_replace request 'ordering' 'date_to' %}"><i class="fa fa-caret-up"></i></a>
+                    </th>
+                    <th>
+                        {% trans "Paid tickets per quota" %}
+                        <a href="?{% url_replace request 'ordering' '-sum_tickets_paid' %}"><i
+                                class="fa fa-caret-down"></i></a>
+                        <a href="?{% url_replace request 'ordering' 'sum_tickets_paid' %}"><i
+                                class="fa fa-caret-up"></i></a>
+                    </th>
+                    <th class="text-right">
+                        {% trans "Status" %}
+                        <a href="?{% url_replace request 'ordering' '-live' %}"><i class="fa fa-caret-down"></i></a>
+                        <a href="?{% url_replace request 'ordering' 'live' %}"><i class="fa fa-caret-up"></i></a>
+                    </th>
                 </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-        {% include "pretixcontrol/pagination.html" %}
-    {% endif %}
+                </thead>
+                <tbody>
+                {% for e in events %}
+                    <tr>
+                        <td class="event-name-col">
+                            <strong><a
+                                    href="{% url "control:event.index" organizer=e.organizer.slug event=e.slug %}">{{ e.name }}</a></strong>
+                            <br>
+                            <small>{{ e.slug }}</small>
+                        </td>
+                        {% if not hide_orga %}
+                            <td>{{ e.organizer }}</td>{% endif %}
+                        <td class="event-date-col">
+                            {% if e.has_subevents %}
+                                {{ e.min_from|default_if_none:""|date:"SHORT_DATETIME_FORMAT" }}
+                            {% else %}
+                                {{ e.get_short_date_from_display }}
+                            {% endif %}
+                            {% if e.has_subevents %}
+                                <span class="label label-default">{% trans "Series" %}</span>
+                            {% endif %}
+                            {% if e.settings.show_date_to and e.date_to %}
+                                –<br>
+                                {% if e.has_subevents %}
+                                    {{ e.max_fromto|default_if_none:e.max_from|default_if_none:e.max_to|default_if_none:""|date:"SHORT_DATETIME_FORMAT" }}
+                                {% else %}
+                                    {{ e.get_short_date_to_display }}
+                                {% endif %}
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% for q in e.first_quotas|slice:":3" %}
+                                {% include "pretixcontrol/fragment_quota_box_paid.html" with quota=q %}
+                            {% endfor %}
+                            {% if e.first_quotas|length > 3 %}
+                                <a href="{% url "control:event.items.quotas" organizer=e.organizer.slug event=e.slug %}"
+                                   class="quotabox-more" data-toggle="tooltip" title="{% trans "More quotas" %}"
+                                   data-placement="top">
+                                    &middot;&middot;&middot;
+                                </a>
+                            {% endif %}
+                        </td>
+                        <td class="text-right">
+                            {% if not e.live %}
+                                <span class="label label-danger">{% trans "Shop disabled" %}</span>
+                                {% elif e.presale_has_ended %}
+                                <span class="label label-warning">{% trans "Presale over" %}</span>
+                                {% elif not e.presale_is_running %}
+                                <span class="label label-warning">{% trans "Presale not started" %}</span>
+                            {% else %}
+                                <span class="label label-success">{% trans "On sale" %}</span>
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+            <div class="panel-footer">
+                {% include "pretixcontrol/pagination.html" %}
+            </div>
+        {% endif %}
+    </div>
 {% endblock %}
