--- a/src/pretix/control/templates/pretixcontrol/global_message.html
+++ b/src/pretix/control/templates/pretixcontrol/global_message.html
@@ -4,6 +4,12 @@
 
 {% block title %}{% trans "System message" %}{% endblock %}
 {% block content %}
-    <h1>{% trans "System message" %}</h1>
-    {{ global_settings.banner_message_detail|rich_text }}
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h1 class="panel-title">{% trans "System message" %}</h1>
+        </div>
+        <div class="panel-body">
+            {{ global_settings.banner_message_detail|rich_text }}
+        </div>
+    </div>
 {% endblock %}
