--- a/src/pretix/control/templates/pretixcontrol/items/question.html
+++ b/src/pretix/control/templates/pretixcontrol/items/question.html
@@ -5,57 +5,76 @@
 {% load formset_tags %}
 {% block title %}{% blocktrans with name=question.question %}Question: {{ name }}{% endblocktrans %}{% endblock %}
 {% block inside %}
-    <div class="panel panel-default panel-with-btn">
-        <div class="panel-heading">
-            <a href="{% url "control:event.items.questions.edit" event=request.event.slug organizer=request.event.organizer.slug question=question.pk %}"
-               class="btn btn-default btn-sm pull-right">
-                <span class="fa fa-edit"></span>
-                {% trans "Edit question" %}
-            </a>
-            <h1 class="panel-title">
-                {% blocktrans with name=question.question %}Question: {{ name }}{% endblocktrans %}
-            </h1>
-        </div>
-        <div class="panel-body">
-            <form class="form-inline helper-display-inline" action="" method="get">
-                <p>
-                    <select name="status" class="form-control">
-                        <option value=""
-                                {% if request.GET.status == "" %}selected="selected"{% endif %}>{% trans "All orders" %}</option>
-                        <option value="p"
-                                {% if request.GET.status == "p" %}selected="selected"{% endif %}>{% trans "Paid" %}</option>
-                        <option value="n"
-                                {% if request.GET.status == "n" %}selected="selected"{% endif %}>{% trans "Pending" %}</option>
-                        <option value="np"
-                                {% if request.GET.status == "np" or "status" not in request.GET %}selected="selected"{% endif %}>{% trans "Pending or paid" %}</option>
-                        <option value="o"
-                                {% if request.GET.status == "o" %}selected="selected"{% endif %}>{% trans "Pending (overdue)" %}</option>
-                        <option value="e"
-                                {% if request.GET.status == "e" %}selected="selected"{% endif %}>{% trans "Expired" %}</option>
-                        <option value="ne"
-                                {% if request.GET.status == "ne" %}selected="selected"{% endif %}>{% trans "Pending or expired" %}</option>
-                        <option value="c"
-                                {% if request.GET.status == "c" %}selected="selected"{% endif %}>{% trans "Canceled" %}</option>
-                        <option value="r"
-                                {% if request.GET.status == "r" %}selected="selected"{% endif %}>{% trans "Refunded" %}</option>
-                    </select>
-                    <select name="item" class="form-control">
-                        <option value="">{% trans "All products" %}</option>
-                        {% for item in items %}
-                            <option value="{{ item.id }}"
-                                    {% if request.GET.item|add:0 == item.id %}selected="selected"{% endif %}>
-                                {{ item.name }}
-                            </option>
-                        {% endfor %}
-                    </select>
-                    <button class="btn btn-primary" type="submit">{% trans "Filter" %}</button>
-                </p>
-            </form>
-        </div>
-    </div>
     <div class="row" id="question-stats">
-        {% if not stats %}
-            <div class="col-md-10 col-xs-12">
+        <div class="col-lg-10 col-xs-12">
+            <div class="panel panel-default panel-with-btn">
+                <div class="panel-heading">
+                    <a href="{% url "control:event.items.questions.edit" event=request.event.slug organizer=request.event.organizer.slug question=question.pk %}"
+                       class="btn btn-default btn-sm pull-right">
+                        <span class="fa fa-edit"></span>
+                        {% trans "Edit question" %}
+                    </a>
+                    <h1 class="panel-title">
+                        {% blocktrans with name=question.question %}Question: {{ name }}{% endblocktrans %}
+                    </h1>
+                </div>
+                <div class="panel-body">
+                    <dl class="dl-horizontal dl-left">
+                        <dt>{% trans "Products" %}</dt>
+                        <dd>{{ question.items.all|join:"<br>" }}</dd>
+                        <dt>{% trans "Type" %}</dt>
+                        <dd>{{ question.get_type_display }}</dd>
+                        <dt>{% trans "Internal reference" %}</dt>
+                        <dd>{{ question.identifier }}</dd>
+                        <dt>{% trans "Answer required" %}</dt>
+                        <dd>{% if question.required %}{% trans "Yes" %}{% else %}{% trans "No" %}{% endif %}</dd>
+                        <dt>{% trans "Time of question" %}</dt>
+                        <dd>{% if not question.ask_during_checkin %}{% trans "Ticket purchase" %}{% else %}
+                            {% trans "Check-in" %}{% endif %}</dd>
+                    </dl>
+                </div>
+                <div class="panel-footer">
+                    <form class="row" action="" method="get">
+                        <div class="col-md-5 col-xs-12">
+                            <select name="status" class="form-control">
+                                <option value=""
+                                        {% if request.GET.status == "" %}selected="selected"{% endif %}>{% trans "All orders" %}</option>
+                                <option value="p"
+                                        {% if request.GET.status == "p" %}selected="selected"{% endif %}>{% trans "Paid" %}</option>
+                                <option value="n"
+                                        {% if request.GET.status == "n" %}selected="selected"{% endif %}>{% trans "Pending" %}</option>
+                                <option value="np"
+                                        {% if request.GET.status == "np" or "status" not in request.GET %}selected="selected"{% endif %}>{% trans "Pending or paid" %}</option>
+                                <option value="o"
+                                        {% if request.GET.status == "o" %}selected="selected"{% endif %}>{% trans "Pending (overdue)" %}</option>
+                                <option value="e"
+                                        {% if request.GET.status == "e" %}selected="selected"{% endif %}>{% trans "Expired" %}</option>
+                                <option value="ne"
+                                        {% if request.GET.status == "ne" %}selected="selected"{% endif %}>{% trans "Pending or expired" %}</option>
+                                <option value="c"
+                                        {% if request.GET.status == "c" %}selected="selected"{% endif %}>{% trans "Canceled" %}</option>
+                                <option value="r"
+                                        {% if request.GET.status == "r" %}selected="selected"{% endif %}>{% trans "Refunded" %}</option>
+                            </select>
+                        </div>
+                        <div class="col-md-5 col-xs-12">
+                            <select name="item" class="form-control">
+                                <option value="">{% trans "All products" %}</option>
+                                {% for item in items %}
+                                    <option value="{{ item.id }}"
+                                            {% if request.GET.item|add:0 == item.id %}selected="selected"{% endif %}>
+                                        {{ item.name }}
+                                    </option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        <div class="col-md-2 col-xs-12">
+                            <button class="btn btn-block btn-primary" type="submit">{% trans "Filter" %}</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            {% if not stats %}
                 <div class="panel panel-default">
                     <div class="panel-body empty-collection">
                         <p>
@@ -69,52 +88,62 @@
                             </p>
 
                             <a href="{% url "control:event.items.questions.edit" event=request.event.slug organizer=request.event.organizer.slug question=question.pk %}"
-                               class="btn btn-primary btn-lg"><i class="fa fa-edit"></i> {% trans "Edit question" %}</a>
+                               class="btn btn-primary btn-lg"><i class="fa fa-edit"></i> {% trans "Edit question" %}
+                            </a>
                         {% endif %}
                     </div>
                 </div>
-            </div>
-        {% else %}
-            <div class="col-md-5 col-xs-12">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <div class="chart" id="question_chart" data-type="{{ question.type }}">
+            {% else %}
+                <div class="row">
+                    <div class="col-md-6 col-xs-12">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <div class="chart" id="question_chart" data-type="{{ question.type }}">
 
+                                </div>
+                                <script type="application/json"
+                                        id="question-chart-data">{{ stats_json|escapejson }}</script>
+                            </div>
                         </div>
-                        <script type="application/json" id="question-chart-data">{{ stats_json|escapejson }}</script>
+                    </div>
+                    <div class="col-md-6 col-xs-12">
+                        <div class="panel panel-default">
+                            <table class="table table-bordered table-hover">
+                                <thead>
+                                <tr>
+                                    <th>{% trans "Answer" %}</th>
+                                    <th>{% trans "Count" %}</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for stat in stats %}
+                                    <tr>
+                                        <td>
+                                            <a href="{% url "control:event.orders" event=request.event.slug organizer=request.event.organizer.slug %}?status=
+
+
+
+
+
+
+
+
+
+                                                    {{ request.GET.status|default:"np" }}&item={{ request.GET.item }}&question={{ question.pk }}&answer=
+                                        {{ stat.alink|default:stat.answer|urlencode }}">
+                                                {{ stat.answer }}
+                                            </a>
+                                        </td>
+                                        <td>{{ stat.count }}</td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-5 col-xs-12">
-                <div class="panel panel-default">
-                    <table class="table table-bordered table-hover">
-                        <thead>
-                        <tr>
-                            <th>{% trans "Answer" %}</th>
-                            <th>{% trans "Count" %}</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for stat in stats %}
-                            <tr>
-                                <td>
-                                    <a href="{% url "control:event.orders" event=request.event.slug organizer=request.event.organizer.slug %}?status=
-
-
-
-                                            {{ request.GET.status|default:"np" }}&item={{ request.GET.item }}&question={{ question.pk }}&answer=
-                                        {{ stat.alink|default:stat.answer|urlencode }}">
-                                        {{ stat.answer }}
-                                    </a>
-                                </td>
-                                <td>{{ stat.count }}</td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        {% endif %}
+            {% endif %}
+        </div>
         <div class="col-xs-12 col-lg-2">
             <div class="panel panel-default">
                 <div class="panel-heading">
