--- a/src/pretix/control/templates/pretixcontrol/oauth/app_rollkeys.html
+++ b/src/pretix/control/templates/pretixcontrol/oauth/app_rollkeys.html
@@ -3,17 +3,24 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "Generate new application secret" %}{% endblock %}
 {% block content %}
-    <h1>{% trans "Generate new application secret" %}</h1>
-        <form action="" method="post" class="form-horizontal">
-            {% csrf_token %}
-            <p>{% blocktrans %}Are you sure you want to generate a new client secret for the application <strong>{{ application }}</strong>?{% endblocktrans %}</p>
-            <div class="form-group submit-group">
-                <a href="{% url "control:user.settings.oauth.apps" %}" class="btn btn-default btn-cancel">
-                    {% trans "Cancel" %}
-                </a>
-                <button type="submit" class="btn btn-danger btn-save">
-                    {% trans "Roll secret" %}
-                </button>
-            </div>
-        </form>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h1 class="panel-title">{% trans "Generate new application secret" %}</h1>
+        </div>
+        <div class="panel-body">
+            <form action="" method="post" class="form-horizontal">
+                {% csrf_token %}
+                <p>{% blocktrans %}Are you sure you want to generate a new client secret for the application
+                    <strong>{{ application }}</strong>?{% endblocktrans %}</p>
+                <div class="form-group submit-group">
+                    <a href="{% url "control:user.settings.oauth.apps" %}" class="btn btn-default btn-cancel">
+                        {% trans "Cancel" %}
+                    </a>
+                    <button type="submit" class="btn btn-danger btn-save">
+                        {% trans "Roll secret" %}
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
