--- a/src/pretix/control/templates/pretixcontrol/organizers/create.html
+++ b/src/pretix/control/templates/pretixcontrol/organizers/create.html
@@ -3,19 +3,22 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "Create a new organizer" %}{% endblock %}
 {% block content %}
-	<h1>{% trans "Create a new organizer" %}</h1>
     <form action="" method="post" class="form-horizontal">
-        {% csrf_token %}
-        {% bootstrap_form_errors form %}
-        <fieldset>
-            <legend>{% trans "General information" %}</legend>
-            {% bootstrap_field form.name layout="horizontal" %}
-            {% bootstrap_field form.slug layout="horizontal" %}
-        </fieldset>
-        <div class="form-group submit-group">
-            <button type="submit" class="btn btn-primary btn-save">
-                {% trans "Save" %}
-            </button>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h1 class="panel-title">{% trans "Create a new organizer" %}</h1>
+            </div>
+            <div class="panel-body">
+                {% csrf_token %}
+                {% bootstrap_form_errors form %}
+                {% bootstrap_field form.name layout="horizontal" %}
+                {% bootstrap_field form.slug layout="horizontal" %}
+                <div class="form-group submit-group">
+                    <button type="submit" class="btn btn-primary btn-save">
+                        {% trans "Save" %}
+                    </button>
+                </div>
+            </div>
         </div>
     </form>
 {% endblock %}
