--- a/src/pretix/control/templates/pretixcontrol/organizers/team_delete.html
+++ b/src/pretix/control/templates/pretixcontrol/organizers/team_delete.html
@@ -2,28 +2,37 @@
 {% load i18n %}
 {% load bootstrap3 %}
 {% block inner %}
-    <h2>{% trans "Delete team:" %} {{ team.name }}</h2>
-    {% if not possible %}
-        <p>{% blocktrans %}You cannot delete the team because there would be no one left who could change team permissions afterwards.{% endblocktrans %}</p>
-        <div class="form-group submit-group">
-            <a href="{% url "control:organizer.teams" organizer=request.organizer.slug %}" class="btn btn-default btn-cancel">
-                {% trans "Cancel" %}
-            </a>
-            <div class="clearfix"></div>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h2 class="panel-titlte">{% trans "Delete team:" %} {{ team.name }}</h2>
         </div>
-    {% else %}
-        <form action="" method="post" class="form-horizontal">
-            {% csrf_token %}
-            <p>{% blocktrans %}Are you sure you want to delete the team?{% endblocktrans %}
-            </p>
-            <div class="form-group submit-group">
-                <a href="{% url "control:organizer.teams" organizer=request.organizer.slug%}" class="btn btn-default btn-cancel">
-                    {% trans "Cancel" %}
-                </a>
-                <button type="submit" class="btn btn-danger btn-save">
-                    {% trans "Delete" %}
-                </button>
-            </div>
-        </form>
-    {% endif %}
+        <div class="panel-body">
+            {% if not possible %}
+                <p>{% blocktrans %}You cannot delete the team because there would be no one left who could change team
+                    permissions afterwards.{% endblocktrans %}</p>
+                <div class="form-group submit-group">
+                    <a href="{% url "control:organizer.teams" organizer=request.organizer.slug %}"
+                       class="btn btn-default btn-cancel">
+                        {% trans "Cancel" %}
+                    </a>
+                    <div class="clearfix"></div>
+                </div>
+            {% else %}
+                <form action="" method="post" class="form-horizontal">
+                    {% csrf_token %}
+                    <p>{% blocktrans %}Are you sure you want to delete the team?{% endblocktrans %}
+                    </p>
+                    <div class="form-group submit-group">
+                        <a href="{% url "control:organizer.teams" organizer=request.organizer.slug %}"
+                           class="btn btn-default btn-cancel">
+                            {% trans "Cancel" %}
+                        </a>
+                        <button type="submit" class="btn btn-danger btn-save">
+                            {% trans "Delete" %}
+                        </button>
+                    </div>
+                </form>
+            {% endif %}
+        </div>
+    </div>
 {% endblock %}
