--- a/src/pretix/control/templates/pretixcontrol/user/2fa_add.html
+++ b/src/pretix/control/templates/pretixcontrol/user/2fa_add.html
@@ -3,16 +3,22 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "Add a two-factor authentication device" %}{% endblock %}
 {% block content %}
-    <h1>{% trans "Add a two-factor authentication device" %}</h1>
-    <form action="" method="post" class="form-horizontal">
-        {% csrf_token %}
-        {% bootstrap_form_errors form %}
-        {% bootstrap_field form.name layout='horizontal' %}
-        {% bootstrap_field form.devicetype layout='horizontal' %}
-        <div class="form-group submit-group">
-            <button type="submit" class="btn btn-primary btn-save">
-                {% trans "Continue" %}
-            </button>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h1 class="panel-title">{% trans "Add a two-factor authentication device" %}</h1>
         </div>
-    </form>
+        <div class="panel-body">
+            <form action="" method="post" class="form-horizontal">
+                {% csrf_token %}
+                {% bootstrap_form_errors form %}
+                {% bootstrap_field form.name layout='horizontal' %}
+                {% bootstrap_field form.devicetype layout='horizontal' %}
+                <div class="form-group submit-group">
+                    <button type="submit" class="btn btn-primary btn-save">
+                        {% trans "Continue" %}
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
