--- a/src/pretix/control/templates/pretixcontrol/user/2fa_delete.html
+++ b/src/pretix/control/templates/pretixcontrol/user/2fa_delete.html
@@ -3,23 +3,29 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "Delete a two-factor authentication device" %}{% endblock %}
 {% block content %}
-    <h1>{% trans "Delete a two-factor authentication device" %}</h1>
-    <form action="" method="post" class="form-horizontal">
-        {% csrf_token %}
-        <p>{% blocktrans trimmed with device=device.name %}
-            Are you sure you want to delete the authentication device "{{ device }}"?
-        {% endblocktrans %}</p>
-        <p>{% trans "You will no longer be able to use this device to log in to pretix." %}</p>
-        <p>
-            {% trans "If this is the only device connected to your account, we will disable two-factor authentication." %}
-        </p>
-        <div class="form-group submit-group">
-            <a href="{% url "control:user.settings.2fa" %}" class="btn btn-default btn-cancel">
-                {% trans "Cancel" %}
-            </a>
-            <button type="submit" class="btn btn-danger btn-save">
-                {% trans "Delete" %}
-            </button>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h1 class="panel-title">{% trans "Delete a two-factor authentication device" %}</h1>
         </div>
-    </form>
+        <div class="panel-body">
+            <form action="" method="post" class="form-horizontal">
+                {% csrf_token %}
+                <p>{% blocktrans trimmed with device=device.name %}
+                    Are you sure you want to delete the authentication device "{{ device }}"?
+                {% endblocktrans %}</p>
+                <p>{% trans "You will no longer be able to use this device to log in to pretix." %}</p>
+                <p>
+                    {% trans "If this is the only device connected to your account, we will disable two-factor authentication." %}
+                </p>
+                <div class="form-group submit-group">
+                    <a href="{% url "control:user.settings.2fa" %}" class="btn btn-default btn-cancel">
+                        {% trans "Cancel" %}
+                    </a>
+                    <button type="submit" class="btn btn-danger btn-save">
+                        {% trans "Delete" %}
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
