--- a/src/pretix/control/templates/pretixcontrol/user/2fa_disable.html
+++ b/src/pretix/control/templates/pretixcontrol/user/2fa_disable.html
@@ -3,22 +3,28 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "Disable two-factor authentication" %}{% endblock %}
 {% block content %}
-    <h1>{% trans "Disable two-factor authentication" %}</h1>
-    <form action="" method="post" class="form-horizontal">
-        {% csrf_token %}
-        <p>
-            {% trans "Do you really want to disable two-factor authentication?" %}
-        </p>
-        <p>
-            {% trans "You will no longer require a second device to log in to your account." %}
-        </p>
-        <div class="form-group submit-group">
-            <a href="{% url "control:user.settings.2fa" %}" class="btn btn-default btn-cancel">
-                {% trans "Cancel" %}
-            </a>
-            <button type="submit" class="btn btn-danger btn-save">
-                {% trans "Disable" %}
-            </button>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h1 class="panel-title">{% trans "Disable two-factor authentication" %}</h1>
         </div>
-    </form>
+        <div class="panel-body">
+            <form action="" method="post" class="form-horizontal">
+                {% csrf_token %}
+                <p>
+                    {% trans "Do you really want to disable two-factor authentication?" %}
+                </p>
+                <p>
+                    {% trans "You will no longer require a second device to log in to your account." %}
+                </p>
+                <div class="form-group submit-group">
+                    <a href="{% url "control:user.settings.2fa" %}" class="btn btn-default btn-cancel">
+                        {% trans "Cancel" %}
+                    </a>
+                    <button type="submit" class="btn btn-danger btn-save">
+                        {% trans "Disable" %}
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
