--- a/src/pretix/control/templates/pretixcontrol/user/2fa_main.html
+++ b/src/pretix/control/templates/pretixcontrol/user/2fa_main.html
@@ -3,34 +3,28 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "Two-factor authentication" %}{% endblock %}
 {% block content %}
-    <h1>{% trans "Two-factor authentication" %}</h1>
-    <p>
-        {% blocktrans trimmed %}
-            Two-factor authentication is a way to add additional security to your account. If you enable it, you will
-            not only need your password to log in, but also an additional token that is generated e.g. by an app on your
-            smartphone or a hardware token generator and that changes on a regular basis.
-        {% endblocktrans %}
-    </p>
-    {% if user.require_2fa %}
-        <div class="panel panel-success">
-            <div class="panel-heading">
-                <h3 class="panel-title">{% trans "Two-factor status" %}</h3>
-            </div>
-            <div class="panel-body">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h1 class="panel-title">{% trans "Two-factor authentication" %}</h1>
+        </div>
+        <div class="panel-body">
+            <p>
+                {% blocktrans trimmed %}
+                    Two-factor authentication is a way to add additional security to your account. If you enable it, you
+                    will
+                    not only need your password to log in, but also an additional token that is generated e.g. by an app
+                    on your
+                    smartphone or a hardware token generator and that changes on a regular basis.
+                {% endblocktrans %}
+            </p>
+            {% if user.require_2fa %}
                 <a href="{% url "control:user.settings.2fa.disable" %}" class="btn btn-primary pull-right">
                     {% trans "Disable" %}
                 </a>
                 <p>
                     <strong>{% trans "Two-factor authentication is currently enabled." %}</strong>
                 </p>
-            </div>
-        </div>
-    {% else %}
-        <div class="panel panel-warning">
-            <div class="panel-heading">
-                <h3 class="panel-title">{% trans "Two-factor status" %}</h3>
-            </div>
-            <div class="panel-body">
+            {% else %}
                 {% if devices|length %}
                     <a href="{% url "control:user.settings.2fa.enable" %}" class="btn btn-primary pull-right">
                         {% trans "Enable" %}
@@ -42,9 +36,9 @@
                 {% if not devices|length %}
                     <p>{% trans "To enable it, you need to configure at least one device below." %}</p>
                 {% endif %}
-            </div>
+            {% endif %}
         </div>
-    {% endif %}
+    </div>
     <div class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">{% trans "Registered devices" %}</h3>
@@ -53,7 +47,7 @@
             {% for d in devices %}
                 <li class="list-group-item">
                     <a class="btn btn-danger btn-xs pull-right"
-                            href="{% url "control:user.settings.2fa.delete" devicetype=d.devicetype device=d.pk %}">
+                       href="{% url "control:user.settings.2fa.delete" devicetype=d.devicetype device=d.pk %}">
                         Delete
                     </a>
                     {% if d.devicetype == "totp" %}
@@ -75,6 +69,10 @@
     </div>
     <div class="panel panel-default">
         <div class="panel-heading">
+            <a href="{% url "control:user.settings.2fa.regenemergency" %}" class="btn btn-default pull-right">
+                <span class="fa fa-refresh"></span>
+                {% trans "Generate new emergency tokens" %}
+            </a>
             <h3 class="panel-title">{% trans "Emergency tokens" %}</h3>
         </div>
         <div class="panel-body">
@@ -87,10 +85,6 @@
                     <li><code>{{ t.token }}</code></li>
                 {% endfor %}
             </ul>
-            <a href="{% url "control:user.settings.2fa.regenemergency" %}" class="btn btn-default">
-                <span class="fa fa-refresh"></span>
-                {% trans "Generate new emergency tokens" %}
-            </a>
         </div>
     </div>
 {% endblock %}
