--- a/src/pretix/control/templates/pretixcontrol/users/form.html
+++ b/src/pretix/control/templates/pretixcontrol/users/form.html
@@ -3,50 +3,62 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "User" %}{% endblock %}
 {% block content %}
-    <h1>{% trans "User" %} {{ user.email }}</h1>
-    <p>
-        <form action="{% url "control:users.reset" id=user.pk %}" method="post" class="form-inline helper-display-inline">
-            {% csrf_token %}
-            <button class="btn btn-default">{% trans "Send password reset email" %}</button>
-        </form>
-        <form action="{% url "control:users.impersonate" id=user.pk %}" method="post" class="form-inline helper-display-inline">
-            {% csrf_token %}
-            <button class="btn btn-default">{% trans "Impersonate user" %}</button>
-        </form>
-    </p>
     <div class="row">
         <div class="col-md-10 col-xs-12">
             <form action="" method="post" class="form-horizontal" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% bootstrap_form_errors form %}
-                <fieldset>
-                    <legend>{% trans "Base settings" %}</legend>
-                    {% bootstrap_field form.is_active layout='control' %}
-                    {% bootstrap_field form.fullname layout='control' %}
-                    {% bootstrap_field form.locale layout='control' %}
-                    {% bootstrap_field form.timezone layout='control' %}
-                    {% bootstrap_field form.is_staff layout='control' %}
+                <fieldset class="panel panel-default">
+                    <div class="panel-heading">
+                        <div class="pull-right">
+                            <form action="{% url "control:users.reset" id=user.pk %}" method="post" class="form-inline helper-display-inline">
+                                {% csrf_token %}
+                                <button class="btn btn-default">{% trans "Send password reset email" %}</button>
+                            </form>
+                            <form action="{% url "control:users.impersonate" id=user.pk %}" method="post"
+                                  class="form-inline helper-display-inline">
+                                {% csrf_token %}
+                                <button class="btn btn-default">{% trans "Impersonate user" %}</button>
+                            </form>
+                        </div>
+                        <h1 class="panel-title">{% trans "User" %} {{ user.email }}</h1>
+                    </div>
+                    <div class="panel-body">
+                        {% bootstrap_field form.is_active layout='control' %}
+                        {% bootstrap_field form.fullname layout='control' %}
+                        {% bootstrap_field form.locale layout='control' %}
+                        {% bootstrap_field form.timezone layout='control' %}
+                        {% bootstrap_field form.is_staff layout='control' %}
+                    </div>
                 </fieldset>
-                <fieldset>
-                    <legend>{% trans "Log-in settings" %}</legend>
-                    {% bootstrap_field form.email layout='control' %}
-                    {% bootstrap_field form.new_pw layout='control' %}
-                    {% bootstrap_field form.new_pw_repeat layout='control' %}
-                    {% bootstrap_field form.require_2fa layout='control' %}
+                <fieldset class="panel panel-default">
+                    <div class="panel-heading">
+                        <legend>{% trans "Log-in settings" %}</legend>
+                    </div>
+                    <div class="panel-body">
+                        {% bootstrap_field form.email layout='control' %}
+                        {% bootstrap_field form.new_pw layout='control' %}
+                        {% bootstrap_field form.new_pw_repeat layout='control' %}
+                        {% bootstrap_field form.require_2fa layout='control' %}
+                    </div>
                 </fieldset>
-                <fieldset>
-                    <legend>{% trans "Team memberships" %}</legend>
-                    <ul>
-                        {% for t in teams %}
-                            <li>
-                                <a href="{% url "control:organizer.team" organizer=t.organizer.slug team=t.pk %}">
-                                    {% blocktrans trimmed with team=t.name organizer=t.organizer.name %}
-                                        Team "{{ team }}" of organizer "{{ organizer }}"
-                                    {% endblocktrans %}
-                                </a>
-                            </li>
-                        {% endfor %}
-                    </ul>
+                <fieldset class="panel panel-default">
+                    <div class="panel-heading">
+                        <legend>{% trans "Team memberships" %}</legend>
+                    </div>
+                    <div class="panel-body">
+                        <ul>
+                            {% for t in teams %}
+                                <li>
+                                    <a href="{% url "control:organizer.team" organizer=t.organizer.slug team=t.pk %}">
+                                        {% blocktrans trimmed with team=t.name organizer=t.organizer.name %}
+                                            Team "{{ team }}" of organizer "{{ organizer }}"
+                                        {% endblocktrans %}
+                                    </a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
                 </fieldset>
                 <div class="form-group submit-group">
                     <button type="submit" class="btn btn-primary btn-save">
