--- a/src/pretix/plugins/badges/templates/pretixplugins/badges/delete.html
+++ b/src/pretix/plugins/badges/templates/pretixplugins/badges/delete.html
@@ -3,18 +3,25 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "Badges" %}{% endblock %}
 {% block content %}
-    <h1>{% trans "Badges" %}</h1>
-    <form action="" method="post" class="form-horizontal">
-        {% csrf_token %}
-        <p>{% blocktrans %}Are you sure you want to delete the badge layout <strong>{{ layout }}</strong>?{% endblocktrans %}</p>
-        <div class="form-group submit-group">
-            <a href="{% url "plugins:badges:index" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn
-btn-default btn-cancel">
-                {% trans "Cancel" %}
-            </a>
-            <button type="submit" class="btn btn-danger btn-save">
-                {% trans "Delete" %}
-            </button>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h1 class="panel-title">{% trans "Badges" %}</h1>
         </div>
-    </form>
+        <div class="panel-body">
+
+            <form action="" method="post" class="form-horizontal">
+                {% csrf_token %}
+                <p>{% blocktrans %}Are you sure you want to delete the badge layout <strong>{{ layout }}</strong>?{% endblocktrans %}</p>
+                <div class="form-group submit-group">
+                    <a href="{% url "plugins:badges:index" organizer=request.event.organizer.slug event=request.event.slug %}"
+                       class="btn btn-default btn-cancel">
+                        {% trans "Cancel" %}
+                    </a>
+                    <button type="submit" class="btn btn-danger btn-save">
+                        {% trans "Delete" %}
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
