--- a/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_assign.html
+++ b/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_assign.html
@@ -1,23 +1,28 @@
 {% extends basetpl %}
 {% load i18n %}
 {% block inner %}
-    <p>{% blocktrans trimmed %}
-        We've been unable to automatically determine how the columns in your file are aligned. Please help us
-        by selecting which column contain what kind of data.
-    {% endblocktrans %}</p>
     <form method="post" action="">
         {% csrf_token %}
-        <button class="btn btn-primary pull-right helper-space-below" type="submit">
-            <span class="icon icon-upload"></span> {% trans "Continue" %}
-        </button>
-        <div class="flipped-scroll-wrapper clearfix">
-            <table class="table table-condensed flipped-scroll-inner">
-                <thead>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <button class="btn btn-primary pull-right helper-space-below" type="submit">
+                    <span class="icon icon-upload"></span> {% trans "Continue" %}
+                </button>
+                {% blocktrans trimmed %}
+                    We've been unable to automatically determine how the columns in your file are aligned. Please help
+                    us by selecting which column contain what kind of data.
+                {% endblocktrans %}
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="flipped-scroll-wrapper clearfix">
+                <table class="table table-condensed flipped-scroll-inner">
+                    <thead>
                     <tr>
                         <th>{% trans "Date" %}</th>
                         {% for col in rows.0 %}
                             <th>
-                                <input type="radio" name="date" value="{{ forloop.counter0 }}" />
+                                <input type="radio" name="date" value="{{ forloop.counter0 }}"/>
                             </th>
                         {% endfor %}
                     </tr>
@@ -25,7 +30,7 @@
                         <th>{% trans "Amount" %}</th>
                         {% for col in rows.0 %}
                             <th>
-                                <input type="radio" name="amount" value="{{ forloop.counter0 }}" required="required" />
+                                <input type="radio" name="amount" value="{{ forloop.counter0 }}" required="required"/>
                             </th>
                         {% endfor %}
                     </tr>
@@ -33,7 +38,7 @@
                         <th>{% trans "Reference" %}</th>
                         {% for col in rows.0 %}
                             <th>
-                                <input type="checkbox" name="reference" value="{{ forloop.counter0 }}" />
+                                <input type="checkbox" name="reference" value="{{ forloop.counter0 }}"/>
                             </th>
                         {% endfor %}
                     </tr>
@@ -41,12 +46,12 @@
                         <th>{% trans "Payer" %}</th>
                         {% for col in rows.0 %}
                             <th>
-                                <input type="checkbox" name="payer" value="{{ forloop.counter0 }}" />
+                                <input type="checkbox" name="payer" value="{{ forloop.counter0 }}"/>
                             </th>
                         {% endfor %}
                     </tr>
-                </thead>
-                <tbody>
+                    </thead>
+                    <tbody>
                     {% for row in rows|slice:":100" %}
                         {% with forloop.counter0 as rowid %}
                             <tr>
@@ -64,11 +69,12 @@
                             </td>
                         </tr>
                     {% endif %}
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </div>
         </div>
-        <input type="hidden" name="cols" value="{{ rows.0|length }}" />
-        <input type="hidden" name="rows" value="{{ rows|length }}" />
+        <input type="hidden" name="cols" value="{{ rows.0|length }}"/>
+        <input type="hidden" name="rows" value="{{ rows|length }}"/>
         <textarea class="helper-display-none" name="data">
             {{ json|escape }}
         </textarea>
