--- a/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_form.html
+++ b/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_form.html
@@ -23,7 +23,8 @@
                     Currently, this feature supports <code>.csv</code> files and files in the MT940 format.
                 {% endblocktrans %}</p>
                 {% if job_running %}
-                    <div class="alert alert-info" data-job-waiting data-job-waiting-url="{% url "plugins:banktransfer:import.job" event=request.event.slug organizer=request.event.organizer.slug job=job_running.pk %}?ajax=1">
+                    <div class="alert alert-info" data-job-waiting
+                         data-job-waiting-url="{% url "plugins:banktransfer:import.job" event=request.event.slug organizer=request.event.organizer.slug job=job_running.pk %}?ajax=1">
                         <span class="fa fa-cog fa-spin"></span>
                         {% trans "An import is currently being processed, please try again in a few minutes." %}
                     </div>
@@ -31,7 +32,8 @@
                     <form action="" method="post" enctype="multipart/form-data" class="form-inline">
                         {% csrf_token %}
                         <div class="form-group">
-                            <label for="file">{% trans "Import file" %}: </label> <input id="file" type="file" name="file"/>
+                            <label for="file">{% trans "Import file" %}: </label> <input id="file" type="file"
+                                                                                         name="file"/>
                         </div>
                         <div class="clearfix"></div>
                         <button class="btn btn-primary pull-right" type="submit">
@@ -47,18 +49,17 @@
             <div class="panel-heading">
                 <h3 class="panel-title">{% trans "Unresolved transactions" %}</h3>
             </div>
+            {% if request.event %}
+                <div class="panel-body">
+                    {% blocktrans trimmed %}
+                        On this page, you can import banking data on a per-event level. You also only see
+                        unmatched transactions imported directly for this event.
+                    {% endblocktrans %}
+                    <a href="{% url "plugins:banktransfer:import" organizer=request.organizer.slug %}"
+                       class="btn btn-default btn-xs">{% trans "Go to organizer-level import" %}</a>
+                </div>
+            {% endif %}
             <div class="panel-body">
-                {% if request.event %}
-                    <p>
-                        {% blocktrans trimmed %}
-                            On this page, you can import banking data on a per-event level. You also only see
-                            unmatched transactions imported directly for this event.
-                        {% endblocktrans %}
-                        <a href="{% url "plugins:banktransfer:import" organizer=request.organizer.slug %}"
-                                class="btn btn-default btn-xs">{% trans "Go to organizer-level import" %}</a>
-                    </p>
-                {% endif %}
-                <p>
                 <form class="form-inline helper-display-inline" action="" method="get">
                     <input type="text" name="search" class="form-control" placeholder="{% trans "Search" %}"
                            value="{{ request.GET.search }}">
@@ -73,16 +74,16 @@
                         </button>
                     </form>
                 {% endif %}
-                </p>
-
-                {% if transactions_unhandled|length > 0 %}
-                    {% include "pretixcontrol/pagination.html" %}
-                    {% include "pretixplugins/banktransfer/transaction_list.html" with list=transactions_unhandled %}
-                    {% include "pretixcontrol/pagination.html" %}
-                {% else %}
-                    <div>{% trans "Your search matched no transactions." %}</div>
-                {% endif %}
             </div>
+
+            {% if transactions_unhandled|length > 0 %}
+                {% include "pretixplugins/banktransfer/transaction_list.html" with list=transactions_unhandled %}
+                <div class="panel-footer">
+                    {% include "pretixcontrol/pagination.html" %}
+                </div>
+            {% else %}
+                <div class="empty-collection panel-body">{% trans "Your search matched no transactions." %}</div>
+            {% endif %}
         </div>
     {% endif %}
     <script type="application/javascript" src="{% static "pretixplugins/banktransfer/ui.js" %}"></script>
