--- a/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/job_detail.html
+++ b/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/job_detail.html
@@ -2,48 +2,57 @@
 {% load i18n %}
 {% load staticfiles %}
 {% block inner %}
-    <h2>{% trans "Import result" %}</h2>
-    {% if job.state == "running" or job.state == "pending" %}
-        <div class="empty-collection" data-job-waiting data-job-waiting-url="{% if request.event %}{% url "plugins:banktransfer:import.job" event=request.event.slug organizer=request.event.organizer.slug job=job.pk %}{% else %}{% url "plugins:banktransfer:import.job" organizer=request.organizer.slug job=job.pk %}{% endif %}?ajax=1">
-            <p>
-                <span class="fa big-grey-icon fa-cog fa big-rotating-icon"></span>
-            </p>
-            <p>
-                {% trans "The result of your import is in progress. Please be patient while we process the data …" %}
-            </p>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <h2 class="panel-title">{% trans "Import result" %}</h2>
         </div>
-    {% else %}
-        {% if job.state == "error" %}
-            <div class="alert alert-danger">
-                {% trans "An internal error occurred during processing your data." %}
+        {% if job.state == "running" or job.state == "pending" %}
+            <div class="panel-body empty-collection" data-job-waiting data-job-waiting-url="{% if request.event %}{% url "plugins:banktransfer:import.job" event=request.event.slug organizer=request.event.organizer.slug job=job.pk %}{% else %}{% url "plugins:banktransfer:import.job" organizer=request.organizer.slug job=job.pk %}{% endif %}?ajax=1">
+                <p>
+                    <span class="fa big-grey-icon fa-cog fa big-rotating-icon"></span>
+                </p>
+                <p>
+                    {% trans "The result of your import is in progress. Please be patient while we process the data …" %}
+                </p>
             </div>
-        {% elif transactions_ignored == 0 and transactions_invalid == 0 and transactions_valid == 0 %}
-            <div class="alert alert-info">
-                {% trans "Your import did not contain any transactions that you did not import before." %}
-            </div>
-        {% endif %}
+        {% else %}
+            {% if job.state == "error" %}
+                <div class="panel-body">
+                    <div class="alert alert-danger">
+                        {% trans "An internal error occurred during processing your data." %}
+                    </div>
+                </div>
+                {% elif transactions_ignored == 0 and transactions_invalid == 0 and transactions_valid == 0 %}
+                <div class="panel-body">
+                    <div class="alert alert-info">
+                        {% trans "Your import did not contain any transactions that you did not import before." %}
+                    </div>
+                </div>
+            {% endif %}
 
-        <table class="table table-condensed">
-            <tr class="success">
-                <td>{{ transactions_valid }}</td>
-                <td>{% trans "Orders marked as paid" %}</td>
-            </tr>
-            <tr class="warning">
-                <td>{{ transactions_invalid }}</td>
-                <td>{% trans "Invalid payments" %}</td>
-            </tr>
-            <tr class="info">
-                <td>{{ transactions_ignored }}</td>
-                <td>{% trans "Ignored payments" %}</td>
-            </tr>
-        </table>
-        {% if transactions_ignored or transactions_invalid %}
-            <a href="{% if request.event %}{% url "plugins:banktransfer:import" event=request.event.slug organizer=request.organizer.slug %}{% else %}{% url "plugins:banktransfer:import" organizer=request.organizer.slug %}{% endif %}"
-                class="btn btn-primary">
-                {% trans "Review invalid and ignored payments" %} &raquo;
-            </a>
+            <table class="table table-condensed">
+                <tr class="success">
+                    <td>{{ transactions_valid }}</td>
+                    <td>{% trans "Orders marked as paid" %}</td>
+                </tr>
+                <tr class="warning">
+                    <td>{{ transactions_invalid }}</td>
+                    <td>{% trans "Invalid payments" %}</td>
+                </tr>
+                <tr class="info">
+                    <td>{{ transactions_ignored }}</td>
+                    <td>{% trans "Ignored payments" %}</td>
+                </tr>
+            </table>
+            {% if transactions_ignored or transactions_invalid %}
+                <div class="panel-body">
+                    <a href="{% if request.event %}{% url "plugins:banktransfer:import" event=request.event.slug organizer=request.organizer.slug %}{% else %}{% url "plugins:banktransfer:import" organizer=request.organizer.slug %}{% endif %}"
+                       class="btn btn-primary">
+                        {% trans "Review invalid and ignored payments" %} &raquo;
+                    </a>
+                </div>
+            {% endif %}
         {% endif %}
-
-    {% endif %}
+    </div>
     <script type="application/javascript" src="{% static "pretixplugins/banktransfer/ui.js" %}"></script>
 {% endblock %}
