--- a/src/pretix/plugins/pretixdroid/templates/pretixplugins/pretixdroid/configuration.html
+++ b/src/pretix/plugins/pretixdroid/templates/pretixplugins/pretixdroid/configuration.html
@@ -4,96 +4,115 @@
 {% load staticfiles %}
 {% block title %}{% trans "Check-in device configuration" %}{% endblock %}
 {% block content %}
-    <h1>{% trans "Check-in device configuration" %}</h1>
-    <p>{% blocktrans trimmed %}
-        pretixdroid is an Android app that you can use to control tickets at the entrance of your event.
-        pretixdesk is the corresponding app for desktop computers.
-    {% endblocktrans %}</p>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h1 class="panel-title">{% trans "Check-in device configuration" %}</h1>
+        </div>
+        <div class="panel-body">
+            {% blocktrans trimmed %}
+                pretixdroid is an Android app that you can use to control tickets at the entrance of your event.
+                pretixdesk is the corresponding app for desktop computers.
+            {% endblocktrans %}
+        </div>
+        {% if configs and "create" not in request.GET %}
+            <div class="panel-footer">
+                <a href="?create=1" class="btn btn-default">
+                    {% trans "Create a new configuration" %}
+                </a>
+            </div>
+        {% endif %}
+    </div>
 
     {% if not configs or "create" in request.GET %}
-        <h2>{% trans "Create app configuration" %}</h2>
-        <p>
-            {% blocktrans trimmed %}
-                To start scanning tickets with our apps, first create a configuration code here:
-            {% endblocktrans %}
-        </p>
-        <form action="?add" method="post" class="form-horizontal">
-            {% csrf_token %}
-            {% bootstrap_form_errors add_form %}
-            {% bootstrap_field add_form.list layout="horizontal" %}
-            {% bootstrap_field add_form.all_items layout="horizontal" %}
-            {% bootstrap_field add_form.items layout="horizontal" %}
-            {% bootstrap_field add_form.show_info layout="horizontal" %}
-            {% bootstrap_field add_form.allow_search layout="horizontal" %}
-            {% bootstrap_field add_form.app layout="horizontal" %}
-            <div class="form-group">
-                <div class="col-md-offset-3 col-md-9">
-                    <button type="submit" class="btn btn-primary btn-save" name="add" value="1">
-                        {% trans "Create configuration" %}
-                    </button>
-                </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h2 class="panel-title">{% trans "Create app configuration" %}</h2>
             </div>
-        </form>
+            <div class="panel-body">
+                <p>
+                    {% blocktrans trimmed %}
+                        To start scanning tickets with our apps, first create a configuration code here:
+                    {% endblocktrans %}
+                </p>
+                <form action="?add" method="post" class="form-horizontal">
+                    {% csrf_token %}
+                    {% bootstrap_form_errors add_form %}
+                    {% bootstrap_field add_form.list layout="horizontal" %}
+                    {% bootstrap_field add_form.all_items layout="horizontal" %}
+                    {% bootstrap_field add_form.items layout="horizontal" %}
+                    {% bootstrap_field add_form.show_info layout="horizontal" %}
+                    {% bootstrap_field add_form.allow_search layout="horizontal" %}
+                    {% bootstrap_field add_form.app layout="horizontal" %}
+                    <div class="submit-group">
+                        <button type="submit" class="btn btn-primary btn-save" name="add" value="1">
+                            {% trans "Create configuration" %}
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
     {% endif %}
 
 
     {% if configs and "create" not in request.GET %}
-        <h2>{% trans "Existing app configurations" %}</h2>
-        <a href="?create=1" class="btn btn-default">
-            {% trans "Create a new configuration" %}
-        </a>
-        <form action="?" method="post" class="form-horizontal">
-            {% csrf_token %}
-            <table class="table">
-                <thead>
-                <tr>
-                    <th>{% trans "ID" %}</th>
-                    <th>{% trans "Check-in list" %}</th>
-                    <th>{% trans "Items" %}</th>
-                    <th>{% trans "Show info" %}</th>
-                    <th>{% trans "Allow search" %}</th>
-                    <th></th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for ac in configs %}
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h2 class="panel-title">{% trans "Existing app configurations" %}</h2>
+            </div>
+            <form action="?" method="post" class="form-horizontal table-responsive">
+                {% csrf_token %}
+                <table class="table">
+                    <thead>
                     <tr>
-                        <td>
-                            {% if ac.app == "pretixdroid" %}
-                                <span class="fa fa-fw fa-android"></span>
-                            {% elif ac.app == "pretixdesk" %}
-                                <span class="fa fa-fw fa-desktop"></span>
-                            {% endif %}
-                            {{ ac.key|slice:"0:8" }}…
-                        </td>
-                        <td>
-                            <a href="{% url "control:event.orders.checkinlists.show" organizer=request.event.organizer.slug event=request.event.slug list=ac.list.id %}">{{ ac.list }}</a>
-                        </td>
-                        <td>
-                            {% if ac.all_items %}
-                                {% trans "All" %}
-                            {% else %}
-                                {% for item in ac.items.all %}
-                                    <a href="{% url "control:event.item" organizer=request.event.organizer.slug event=request.event.slug item=item.id %}">{{ item.name }}</a>
-                                    {% if forloop.revcounter0 > 0 %}<br>{% endif %}
-                                {% endfor %}
-                            {% endif %}
-                        </td>
-                        <td>{% if ac.show_info %}{% trans "Yes" %}{% else %}{% trans "No" %}{% endif %}</td>
-                        <td>{% if ac.allow_search %}{% trans "Yes" %}{% else %}{% trans "No" %}{% endif %}</td>
-                        <td class="text-right">
-                            <a href="{% url "plugins:pretixdroid:config.code" organizer=request.event.organizer.slug event=request.event.slug config=ac.pk %}" class="btn btn-default">
-                                <span class="fa fa-qrcode"></span> {% trans "Configure device" %}
-                            </a>
-                            <button class="btn btn-danger" name="delete" value="{{ ac.pk }}">
-                                <span class="fa fa-trash"></span>
-                            </button>
-                        </td>
+                        <th>{% trans "ID" %}</th>
+                        <th>{% trans "Check-in list" %}</th>
+                        <th>{% trans "Items" %}</th>
+                        <th>{% trans "Show info" %}</th>
+                        <th>{% trans "Allow search" %}</th>
+                        <th></th>
                     </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </form>
+                    </thead>
+                    <tbody>
+                    {% for ac in configs %}
+                        <tr>
+                            <td>
+                                {% if ac.app == "pretixdroid" %}
+                                    <span class="fa fa-fw fa-android"></span>
+                                {% elif ac.app == "pretixdesk" %}
+                                    <span class="fa fa-fw fa-desktop"></span>
+                                {% endif %}
+                                {{ ac.key|slice:"0:8" }}…
+                            </td>
+                            <td>
+                                <a href="{% url "control:event.orders.checkinlists.show" organizer=request.event.organizer.slug event=request.event.slug list=ac.list.id %}">{{ ac.list }}</a>
+                            </td>
+                            <td>
+                                {% if ac.all_items %}
+                                    {% trans "All" %}
+                                {% else %}
+                                    {% for item in ac.items.all %}
+                                        <a href="{% url "control:event.item" organizer=request.event.organizer.slug event=request.event.slug item=item.id %}">{{ item.name }}</a>
+                                        {% if forloop.revcounter0 > 0 %}<br>{% endif %}
+                                    {% endfor %}
+                                {% endif %}
+                            </td>
+                            <td>{% if ac.show_info %}{% trans "Yes" %}{% else %}{% trans "No" %}{% endif %}</td>
+                            <td>{% if ac.allow_search %}{% trans "Yes" %}{% else %}{% trans "No" %}{% endif %}</td>
+                            <td class="text-right">
+                                <a href="{% url "plugins:pretixdroid:config.code" organizer=request.event.organizer.slug event=request.event.slug config=ac.pk %}"
+                                   class="btn btn-default">
+                                    <span class="fa fa-qrcode"></span> {% trans "Configure device" %}
+                                </a>
+                                <button class="btn btn-danger" name="delete" value="{{ ac.pk }}">
+                                    <span class="fa fa-trash"></span>
+                                </button>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </form>
+        </div>
     {% endif %}
 {% endblock %}
 
