--- a/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/history.html
+++ b/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/history.html
@@ -3,8 +3,10 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "Send out emails" %}{% endblock %}
 {% block content %}
-    <h1>{% trans "Email history" %}</h1>
-    <div>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h1 class="panel-title">{% trans "Email history" %}</h1>
+        </div>
         <ul class="list-group">
             {% for log in logs %}
                 <li class="list-group-item logentry">
@@ -36,6 +38,8 @@
                 </li>
             {% endfor %}
         </ul>
+        <div class="panel-footer">
+            {% include "pretixcontrol/pagination.html" %}
+        </div>
     </div>
-    {% include "pretixcontrol/pagination.html" %}
 {% endblock %}
