--- a/src/pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/delete.html
+++ b/src/pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/delete.html
@@ -3,18 +3,25 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "Ticket layout" %}{% endblock %}
 {% block content %}
-    <h1>{% trans "Ticket layout" %}</h1>
-    <form action="" method="post" class="form-horizontal">
-        {% csrf_token %}
-        <p>{% blocktrans %}Are you sure you want to delete the layout <strong>{{ layout }}</strong>?{% endblocktrans %}</p>
-        <div class="form-group submit-group">
-            <a href="{% url "plugins:badges:index" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn
-btn-default btn-cancel">
-                {% trans "Cancel" %}
-            </a>
-            <button type="submit" class="btn btn-danger btn-save">
-                {% trans "Delete" %}
-            </button>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h1>{% trans "Ticket layout" %}</h1>
         </div>
-    </form>
+        <div class="panel-body">
+            <form action="" method="post" class="form-horizontal">
+                {% csrf_token %}
+                <p>{% blocktrans %}Are you sure you want to delete the layout <strong>{{ layout }}</strong>
+                    ?{% endblocktrans %}</p>
+                <div class="form-group submit-group">
+                    <a href="{% url "plugins:badges:index" organizer=request.event.organizer.slug event=request.event.slug %}"
+                       class="btn btn-default btn-cancel">
+                        {% trans "Cancel" %}
+                    </a>
+                    <button type="submit" class="btn btn-danger btn-save">
+                        {% trans "Delete" %}
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
