--- a/src/pretix/static/pretixcontrol/scss/_forms.scss
+++ b/src/pretix/static/pretixcontrol/scss/_forms.scss
@@ -74,7 +74,9 @@ div[data-formset-body], div[data-formset-form], div[data-nested-formset-form], d
 .panel-body .submit-group {
   box-shadow: none;
   padding: 0;
-
+}
+.panel-body .submit-group:first-child {
+  margin: 0 !important;
 }
 
 .panel .form-group:last-child {
@@ -351,7 +353,6 @@ table td > .checkbox input[type="checkbox"] {
 }
 .panel-default>.accordion-radio>.panel-heading {
   color: #333;
-  background-color: #f5f5f5;
   padding: 12px 15px;
 
   input[type=checkbox] {
